syntax = "proto3";
package temporal.compounder;

option go_package = "temporal/x/compounder/types";
import "temporal/compounder/validator_setting.proto"; 
import "temporal/compounder/frequency.proto"; 
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message CompoundSettings {
  string index123 = 1; 
  ValidatorSetting validatorSettings = 2; 
  cosmos.base.v1beta1.Coin amountToRemain = 3 [(gogoproto.nullable) = false]; 
  Frequency frequency = 4; 
  string delegator = 5;
}

