syntax = "proto3";

package temporal.compounder;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "temporal/compounder/params.proto";
import "temporal/compounder/compound_settings.proto";
import "temporal/compounder/frequency.proto";
import "temporal/compounder/validator_setting.proto";
import "cosmos/base/v1beta1/coin.proto";
import "temporal/compounder/previous_compounding.proto";

option go_package = "github.com/temporal-zone/temporal/x/compounder/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/temporal/compounder/params";
  
  }
  
  // Queries a list of CompoundSettings items.
  rpc CompoundSettings    (QueryGetCompoundSettingsRequest) returns (QueryGetCompoundSettingsResponse) {
    option (google.api.http).get = "/temporal/compounder/compound_settings/{delegator}";
  
  }
  rpc CompoundSettingsAll (QueryAllCompoundSettingsRequest) returns (QueryAllCompoundSettingsResponse) {
    option (google.api.http).get = "/temporal/compounder/compound_settings";
  
  }
  
  // Queries a list of PreviousCompounding items.
  rpc PreviousCompounding    (QueryGetPreviousCompoundingRequest) returns (QueryGetPreviousCompoundingResponse) {
    option (google.api.http).get = "/temporal/compounder/previous_compounding/{delegator}";
  
  }
  rpc PreviousCompoundingAll (QueryAllPreviousCompoundingRequest) returns (QueryAllPreviousCompoundingResponse) {
    option (google.api.http).get = "/temporal/compounder/previous_compounding";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCompoundSettingsRequest {
  string delegator = 1;
}

message QueryGetCompoundSettingsResponse {
  CompoundSettings compoundSettings = 1 [(gogoproto.nullable) = false];
}

message QueryAllCompoundSettingsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCompoundSettingsResponse {
  repeated CompoundSettings                       compoundSettings = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

message QueryGetPreviousCompoundingRequest {
  string delegator = 1;
}

message QueryGetPreviousCompoundingResponse {
  PreviousCompounding previousCompounding = 1 [(gogoproto.nullable) = false];
}

message QueryAllPreviousCompoundingRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPreviousCompoundingResponse {
  repeated PreviousCompounding                    previousCompounding = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination          = 2;
}

